added custom actions ...

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+#Till Now we have seen some steps are repeated in lot of jobs like getting the code, installing dependencies, using cache
+
 name: Deployment
 on:
   push:
@@ -9,15 +11,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: cache & dependencies
+        uses: ./github/actions/cached-deps
       - name: Lint code
         run: npm run lint
   test:
