--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: cache & dependencies
-        uses: ./github/actions/cached-deps
+        uses: ./.github/actions/cached-deps
       - name: Test code
         id: run-tests
         run: npm run test
@@ -38,7 +38,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: cache & dependencies
-        uses: ./github/actions/cached-deps
+        uses: ./.github/actions/cached-deps
       - name: Build website
         run: npm run build
       - name: Upload artifacts
