added inputs in custom actions...

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: cache & dependencies
-        uses: ./github/actions/cached-deps
+        uses: ./.github/actions/cached-deps
       - name: Lint code
         run: npm run lint
   test:
