--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v3
       - name: cache & dependencies
         uses: ./.github/actions/cached-deps
+        with:
+          cached: 'false'
       - name: Lint code
         run: npm run lint
   test:
