modified some inputs in custom actions...

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: cache & dependencies
         uses: ./.github/actions/cached-deps
         with:
-          cached: 'false'
+          caching: 'false'
       - name: Lint code
         run: npm run lint
   test:
