--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,12 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: cache & dependencies
+        id: cache-deps
         uses: ./.github/actions/cached-deps
         with:
           caching: 'false'
+      - name: Output information
+        run: echo "cache used? ${{ steps.cache-deps.outputs.use-cache }}"
       - name: Lint code
         run: npm run lint
   test:
