--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -8,7 +8,7 @@ inputs:
 outputs:
   use-cache:
     description: whether the cache used or not
-    value: ${{ steps.install }}
+    value: ${{ steps.install.outputs.cache }}
 runs:
   using: 'composite'
   steps:
